Changelog
--------------------------------------------
- Use libvlcqt for display purposes
- Added dependancy for libvlcqt
 