@@ -1,4 +1,0 @@
-<RCC>
-    <qresource prefix="Add_Group">
-    </qresource>
-</RCC>
