@@ -1,0 +1,4 @@
+<RCC>
+    <qresource prefix="Edit_Group">
+    </qresource>
+</RCC>
