@@ -5,22 +5,28 @@ Tacktech_Manager::Tacktech_Manager(QWidget *parent, Qt::WFlags flags)
 {
 #ifdef _DEBUG
 	std::cout << "= Setting up Tacktech Manager" << std::endl;
+	std::cout << " - Creating new edit_group_class" << std::endl;
 #endif // _DEBUG
 
-	/* Setting up global variables */
-	add_group_window = new Add_Group();
+	/* Create new pointer to Edit_Group */
+	edit_group_class = new Edit_Group();
 
-	ui.setupUi(this);
+#ifdef _DEBUG
+	std::cout << " - Setting management_tree_widget headers" << std::endl;
+#endif // _DEBUG
 	QStringList manager_headers;
 	manager_headers << "Group" << "Playlist";
 	ui.management_tree_widget->setHeaderLabels(manager_headers);
 
 #ifdef _DEBUG
+	std::cout << " - Setting up UI" << std::endl;
+#endif // _DEBUG
+	ui.setupUi(this);
+	
+#ifdef _DEBUG
 	std::cout << " - Connecting action signals" << std::endl;
 #endif // _DEBUG
 	/* Connect the main menu GUI signals */
-	connect(ui.actionAdd_Group, SIGNAL(triggered()),
-		this, SLOT(add_group()));
 	connect(ui.actionEdit_Group, SIGNAL(triggered()),
 		this, SLOT(edit_group()));
 	connect(ui.actionCreate_Playlist, SIGNAL(triggered()),
@@ -31,13 +37,11 @@ Tacktech_Manager::Tacktech_Manager(QWidget *parent, Qt::WFlags flags)
 		this, SLOT(edit_preferences()));
 
 	/* Connecting secondany signals */
-	connect(add_group_window, SIGNAL(add_group_input_complete(QString)),
-		this, SLOT(add_group_input_complete(QString)));
 }
 
 Tacktech_Manager::~Tacktech_Manager()
 {
-	delete add_group_window;
+	delete edit_group_class;
 }
 
 /** Function will refresh all group statuses
@@ -47,32 +51,6 @@ void Tacktech_Manager::refresh_all_groups()
 
 }
 
-/** Function will open the add group GUI. Connects the Add_Group class's
- ** add_group_input_complete(QString) signal to this class's
- ** add_group_input_complete(QString) slot.
- ** */
-void Tacktech_Manager::add_group()
-{
-	/* I actually suppose this disconnecting/reconnecting and 
-	 * deleting/creating of pointers and signals are a bit of a hack, but
-	 * it works at least */
-#ifdef _DEBUG
-	std::cout << " - Creating and showing Add_Group GUI" << std::endl;
-#endif // _DEBUG
-	/* Deleting the old pointer to add_group_window and disconnecting the
-	 * signal from the old pointer */
-	disconnect(add_group_window, SIGNAL(add_group_input_complete(QString)),
-		this, SLOT(add_group_input_complete(QString)));
-	delete add_group_window;
-
-	/* Creating new pointer to add_group_window and reconnecting signal
-	 * to the new pointer */
-	add_group_window = new Add_Group();
-	connect(add_group_window, SIGNAL(add_group_input_complete(QString)),
-		this, SLOT(add_group_input_complete(QString)));
-	add_group_window->show();
-}
-
 /** Function will open the edit group GUI
  ** */
 void Tacktech_Manager::edit_group()
@@ -80,6 +58,8 @@ void Tacktech_Manager::edit_group()
 #ifdef _DEBUG
 	std::cout << " - Creating and showing Edit_Group GUI" << std::endl;
 #endif // _DEBUG
+	edit_group_class->set_group_names(group_names);
+	edit_group_class->show();
 }
 
 /** Function will open the create playlist GUI
@@ -136,6 +116,5 @@ void Tacktech_Manager::add_group_input_complete( QString group_name )
 		std::cout << "  - Group name already in list, recalling add_group()" 
 			<< std::endl;
 #endif // _DEBUG
-		add_group();
 	}
 }
