@@ -2,4 +2,6 @@ Changelog
 --------------------------------------------
 - Use libvlcqt for display purposes
 - Added dependancy for libvlcqt
+- Replaced Add_Group with Edit_Group
+- CMake does not build Tacktech_Display on windows (yet)
  
